--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+asgiref==3.3.1
+Django==3.1.4
+django-environ==0.4.5
 gunicorn==20.0.4
 Pillow==8.0.1
 psycopg2==2.8.6
-
-
-
+python-decouple==3.3
+pytz==2020.5
+sqlparse==0.4.1
+whitenoise==5.2.0
